GNOME Bugzilla – Bug 643780
shouldn't need to create an action group to use actions on a GApplication launcher instance
Last modified: 2011-03-07 04:09:28 UTC
GApplication currently checks application->priv->actions at the top of some action-related functions. As a result, if your local application instance has no actions (because it's just a launcher for the real app, perhaps), you still need to create an action group before you can talk to the real app's actions.
Created attachment 182345 [details] [review] move action group checks to more appropriate places
Makes sense to me, but maybe I am missing something - Ryan ?