Improve preconditions in action-related GApplication api

https://bugzilla.gnome.org/show_bug.cgi?id=643780